	PR middle-end/48600 	* predict.c (predict_paths_for_bb): Prevent looping. 	(predict_paths_leading_to_edge, predict_paths_leading_to): Update. 	* g++.dg/torture/pr48600.C: New testcase.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@184089 138bc75d-0d04-0410-961f-82ee72b054a4